// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProviderCard snapshot test open dailog 1`] = `
<div
  class="bp3-dialog"
  style="width: 100%; padding: 40px; position: relative; height: 100vh; background: none; margin: 0px;"
>
  <div
    class="frameContainer"
  >
    <div
      class="frameHeader"
    >
      <img
        alt=""
        aria-hidden="true"
        class="argoLogo"
        src="test-file-stub"
      />
      Darwin Argo Dev Env
       - 
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main closeIcon Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
        data-testid="close-certi-upload-modal"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-cross StyledProps--main"
          icon="cross"
        >
          <svg
            data-icon="cross"
            height="18"
            viewBox="0 0 16 16"
            width="18"
          >
            <desc>
              cross
            </desc>
            <path
              d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <iframe
      class="argoFrame"
      frameborder="0"
      id="argoCD"
      name="argoCD"
      title="argoCD"
      width="100%"
    />
  </div>
</div>
`;

exports[`ProviderCard snapshot test should open menu, edit and confirmation after delete 1`] = `
<div
  class="bp3-popover-content"
>
  <ul
    class="bp3-menu"
    style="min-width: unset;"
  >
    <li
      class=""
    >
      <a
        class="bp3-menu-item bp3-popover-dismiss"
      >
        <span
          class="bp3-icon bp3-icon-edit"
          icon="edit"
        >
          <svg
            data-icon="edit"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              edit
            </desc>
            <path
              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          Edit
        </div>
      </a>
    </li>
    <li
      class=""
    >
      <a
        class="bp3-menu-item bp3-popover-dismiss"
      >
        <span
          class="bp3-icon bp3-icon-trash"
          icon="trash"
        >
          <svg
            data-icon="trash"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              trash
            </desc>
            <path
              d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          Delete
        </div>
      </a>
    </li>
  </ul>
</div>
`;

exports[`ProviderCard snapshot test should open menu, edit and confirmation after delete 2`] = `
<div
  class="bp3-dialog ConfirmationDialog--dialog"
  style="width: 500px; min-height: 218px;"
>
  <div
    class="StyledProps--font StyledProps--main ConfirmationDialog--iconContainer StyledProps--flex"
  >
    <span
      class="bp3-icon StyledProps--main ConfirmationDialog--icon"
      data-icon="main-close"
    >
      <svg
        height="8"
        viewBox="0 0 14 14"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.6 7l5-5c.3-.2.4-.5.4-.8 0-.7-.5-1.2-1.2-1.2-.3 0-.6.1-.8.3l-5 5-5-5C1.8.1 1.5 0 1.2 0 .5 0 0 .5 0 1.2c0 .3.1.6.3.8l5 5-5 5c-.2.2-.3.5-.3.8 0 .7.5 1.2 1.2 1.2.3 0 .6-.1.8-.3l5-5 5 5c.2.2.5.4.8.4.6 0 1.2-.5 1.2-1.2 0-.3-.1-.6-.3-.8z"
          fill="#4d5969"
        />
      </svg>
    </span>
  </div>
  <div
    class="Layout--horizontal StyledProps--main ConfirmationDialog--header StyledProps--padding-left-xsmall"
  >
    <span
      class="bp3-icon StyledProps--main StyledProps--margin-right-small"
      data-icon="danger-icon"
    >
      <svg
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M16.878 4.506a1 1 0 00-1.737 0L3.153 25.505A1 1 0 004.022 27h23.974a1 1 0 00.869-1.495L16.878 4.506zm.603 17.973c0-.823-.684-1.49-1.527-1.49-.843 0-1.527.667-1.527 1.49 0 .822.684 1.49 1.527 1.49.843 0 1.527-.668 1.527-1.49zm-1.527-3.486a1 1 0 001-1v-6.997a1 1 0 00-2 0v6.997a1 1 0 001 1z"
          fill="#DA291D"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.022 26L16.009 5.002 27.996 26H4.022zm11.832-6.01a2 2 0 01-1.9-1.997v-6.997a2 2 0 114 0v6.997a2 2 0 01-1.9 1.998c1.328.052 2.427 1.124 2.427 2.488 0 1.398-1.155 2.49-2.527 2.49s-2.527-1.092-2.527-2.49c0-1.364 1.099-2.436 2.427-2.488zM15.14 4.507a1 1 0 011.737 0l11.987 20.999A1 1 0 0127.996 27H4.022a1 1 0 01-.869-1.495L15.141 4.506zm.813 16.483c.843 0 1.527.667 1.527 1.49 0 .822-.684 1.49-1.527 1.49-.843 0-1.527-.668-1.527-1.49 0-.823.684-1.49 1.527-1.49zm1-2.996a1 1 0 01-2 0v-6.997a1 1 0 112 0v6.997z"
          fill="#DA291D"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-h4"
    >
      cd.confirmDeleteTitle
    </p>
  </div>
  <div
    class="Layout--vertical StyledProps--main ConfirmationDialog--body StyledProps--font StyledProps--font-variation-body StyledProps--color StyledProps--color-black StyledProps--margin-top-large StyledProps--margin-bottom-xxlarge"
  >
    <div
      class="connectorDeleteDialog"
    >
      <p
        class="StyledProps--font StyledProps--main confirmText StyledProps--margin-bottom-medium"
        title="Darwin Argo Dev Env"
      >
        cd.confirmProviderDelete Darwin Argo Dev Env?
      </p>
    </div>
  </div>
  <div
    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-danger Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        delete
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        cancel
      </span>
    </button>
  </div>
</div>
`;

exports[`ProviderCard snapshot test should open menu, edit and confirmation after delete 3`] = `
<div>
  <div
    class="bp3-card bp3-interactive bp3-elevation-0 Card--card card Card--interactive"
    tabindex="0"
  >
    <div
      class="StyledProps--font StyledProps--main projectInfo"
    >
      <div
        class="mainTitle"
      >
        <img
          alt=""
          aria-hidden="true"
          class="argoLogo"
          src="test-file-stub"
        />
        <div
          class="Layout--horizontal StyledProps--main layout"
        >
          <span
            class="bp3-popover-wrapper bp3-dark"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main iconMore StyledProps--color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <div
                  class="bp3-spinner bp3-button-spinner"
                >
                  <div
                    class="bp3-spinner-animation"
                  >
                    <svg
                      height="20"
                      stroke-width="16.00"
                      viewBox="-3.00 -3.00 106.00 106.00"
                      width="20"
                    >
                      <path
                        class="bp3-spinner-track"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                      />
                      <path
                        class="bp3-spinner-head"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                        pathLength="280"
                        stroke-dasharray="280 280"
                        stroke-dashoffset="210"
                      />
                    </svg>
                  </div>
                </div>
                <span
                  class="bp3-icon bp3-icon-more StyledProps--main"
                  icon="more"
                >
                  <svg
                    data-icon="more"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      more
                    </desc>
                    <path
                      d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-bold StyledProps--margin-top-small StyledProps--color StyledProps--color-grey800"
        data-testid="DarwinArgoDevEnv"
        style="--text-line-clamp: 1;"
      >
        Darwin Argo Dev Env
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-small StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-xsmall"
        style="--text-line-clamp: 1;"
      >
        idLabel
      </p>
      <div
        class="tags"
      >
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main tagsPopover StyledProps--flex StyledProps--flex-align-center-center"
              tabindex="0"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
                data-icon="main-tags"
              >
                <svg
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 0h-.2c-.2 0-.4.1-.6.3l-6 6c-.3.3-.3.8 0 1.1L2 9.1l4.6 4.6c.3.3.8.3 1.1 0l6-6c.2-.1.3-.3.3-.5v-.7-.3-1.3-2c0-.5-.4-1-1-1h-.9V1c0-.5-.4-1-1-1H7zm0 .6h4.2c.2 0 .4.2.4.4v.9h-1.1c-.3-.3-.5-.4-.8-.4s-.4.1-.6.3h-.5c-.2.1-.4.1-.6.3l-6 6s-.1.1-.1.2L.7 6.9c-.1-.1-.1-.2 0-.3l6-6s.1-.1.2-.1c0 .1.1.1.1.1zm1.9 1.8H13c.2 0 .4.2.4.4v4.3s0 .2-.1.2l-6 6c-.1.1-.2.1-.3 0L2.5 8.8c-.1-.1-.1-.2 0-.3l6-6s.1-.1.2-.1zm2.7.9c-.2 0-.5.1-.6.3-.4.4-.4.9 0 1.3s.9.4 1.3 0 .4-.9 0-1.3c-.3-.2-.5-.3-.7-.3zm0 .7c.1 0 .2 0 .2.1.1.1.1.3 0 .4s-.3.1-.4 0-.1-.3 0-.4c0-.1.1-.1.2-.1z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main"
              >
                1
              </p>
            </div>
          </span>
        </span>
      </div>
      <div
        class="urls"
      >
        <div
          class="serverUrl"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-small"
          >
            cd.argoAdapterURL
            :
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProviderCard snapshot test should render ProviderCard 1`] = `
<div>
  <div
    class="bp3-card bp3-interactive bp3-elevation-0 Card--card card Card--interactive"
    tabindex="0"
  >
    <div
      class="StyledProps--font StyledProps--main projectInfo"
    >
      <div
        class="mainTitle"
      >
        <img
          alt=""
          aria-hidden="true"
          class="argoLogo"
          src="test-file-stub"
        />
        <div
          class="Layout--horizontal StyledProps--main layout"
        >
          <span
            class="bp3-popover-wrapper bp3-dark"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main iconMore StyledProps--color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-more StyledProps--main"
                  icon="more"
                >
                  <svg
                    data-icon="more"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      more
                    </desc>
                    <path
                      d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-bold StyledProps--margin-top-small StyledProps--color StyledProps--color-grey800"
        data-testid="DarwinArgoDevEnv"
        style="--text-line-clamp: 1;"
      >
        Darwin Argo Dev Env
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-small StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-xsmall"
        style="--text-line-clamp: 1;"
      >
        idLabel
      </p>
      <div
        class="tags"
      >
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main tagsPopover StyledProps--flex StyledProps--flex-align-center-center"
              tabindex="0"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
                data-icon="main-tags"
              >
                <svg
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 0h-.2c-.2 0-.4.1-.6.3l-6 6c-.3.3-.3.8 0 1.1L2 9.1l4.6 4.6c.3.3.8.3 1.1 0l6-6c.2-.1.3-.3.3-.5v-.7-.3-1.3-2c0-.5-.4-1-1-1h-.9V1c0-.5-.4-1-1-1H7zm0 .6h4.2c.2 0 .4.2.4.4v.9h-1.1c-.3-.3-.5-.4-.8-.4s-.4.1-.6.3h-.5c-.2.1-.4.1-.6.3l-6 6s-.1.1-.1.2L.7 6.9c-.1-.1-.1-.2 0-.3l6-6s.1-.1.2-.1c0 .1.1.1.1.1zm1.9 1.8H13c.2 0 .4.2.4.4v4.3s0 .2-.1.2l-6 6c-.1.1-.2.1-.3 0L2.5 8.8c-.1-.1-.1-.2 0-.3l6-6s.1-.1.2-.1zm2.7.9c-.2 0-.5.1-.6.3-.4.4-.4.9 0 1.3s.9.4 1.3 0 .4-.9 0-1.3c-.3-.2-.5-.3-.7-.3zm0 .7c.1 0 .2 0 .2.1.1.1.1.3 0 .4s-.3.1-.4 0-.1-.3 0-.4c0-.1.1-.1.2-.1z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main"
              >
                1
              </p>
            </div>
          </span>
        </span>
      </div>
      <div
        class="urls"
      >
        <div
          class="serverUrl"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-small"
          >
            cd.argoAdapterURL
            :
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
